# science-in-nyc

./: .env.example  README.md  main.ipynb  main.py  pyproject.toml
utils/: settings.py
