[project]
name = "science-in-nyc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic-settings>=2.11.0",
    "statsmodels>=0.14.5",
]


[project.optional-dependencies]
dev = [
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "A", "C", "B", "D", "RUF"]
ignore = [
    "E203", 
    "D103"
] 
extend-ignore = ["ANN"]
